--- a/index.html
+++ b/index.html
@@ -47,8 +47,22 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <label for="city">Enter City</label>
+                        <input type="text" placeholder="1/10/2010" id="city" />
                     </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="state">Enter State</label>
+                        <input type="text" placeholder="1/10/2010" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="country">Enter Country</label>
+                        <input type="text" placeholder="1/10/2010" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="shape">Enter shape</label>
+                        <input type="text" placeholder="1/10/2010" id="shape" />
+                    </li>
+                    
                 </ul>
               </form>
           </div>
