--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                     </li>
                     <li class="list-group-item bg-dark">
                         <label for="city">Enter City</label>
-                        <input type="text" placeholder="1/10/2010" id="city" />
+                        <input type="text" placeholder="el cajon" id="city" />
                     </li>
                     <li class="list-group-item bg-dark">
                         <label for="state">Enter State</label>
-                        <input type="text" placeholder="1/10/2010" id="state" />
+                        <input type="text" placeholder="ca" id="state" />
                     </li>
                     <li class="list-group-item bg-dark">
                         <label for="country">Enter Country</label>
-                        <input type="text" placeholder="1/10/2010" id="country" />
+                        <input type="text" placeholder="us" id="country" />
                     </li>
                     <li class="list-group-item bg-dark">
                         <label for="shape">Enter shape</label>
-                        <input type="text" placeholder="1/10/2010" id="shape" />
+                        <input type="text" placeholder="triangle" id="shape" />
                     </li>
                     
                 </ul>
